<resources>
    <string name="app_name">Ui Activity 4</string>
    <string name="welcome">Welcome to the quiz!</string>
    <string name="exit">Exit</string>
    <string name="proceed">Proceed</string>
    <string name="q1">1. What is Kotlin?</string>
    <string name="choice1a">A. A programming language</string>
    <string name="choice1b">B. A web browser</string>
    <string name="choice1c">C. An operating system</string>
    <string name="choice1d">D. A text editor</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="q2">2. Which of the following is NOT a feature of Kotlin?</string>
    <string name="choice2a">A. Null safety</string>
    <string name="choice2b">B. Extension functions</string>
    <string name="choice2c">C. Type inference</string>
    <string name="choice2d">D. Goto statement</string>
    <string name="q3">3. What is the keyword used to declare a variable in Kotlin?</string>
    <string name="choice3a">A. Dim</string>
    <string name="choice3b">B. Val</string>
    <string name="choice3c">C. Let</string>
    <string name="choice3d">D. Var</string>
    <string name="q4">4. What is the function used to print output to the console in Kotlin?</string>
    <string name="choice4a">A. print()</string>
    <string name="choice4b">B. echo()</string>
    <string name="choice4c">C. write()</string>
    <string name="choice4d">D. println()</string>
    <string name="q5">5. Which of the following is true about Kotlin?</string>
    <string name="choice5a">A. It is a statically-typed language</string>
    <string name="choice5b">B. It is only used for mobile app development</string>
    <string name="choice5c">C. It is a dynamically-typed language</string>
    <string name="choice5d">D. It doesn\'t support object-oriented programming</string>
    <string name="congratulations">Congratulations!</string>
    <string name="potato">Here\'s a brainy potato.</string>
    <string name="main_menu">Main Menu</string>
</resources>